GCD problem solution

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        ".",
+        "./week2_algorithmic_warmup",
         "-p",
         "*_test.py"
     ],
